--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: c
 compiler:
   - gcc
   - clang
+before_install:
+  - sudo apt-get update -qq >/dev/null 2>&1
+  - sudo apt-get install -qq libevent-dev >/dev/null 2>&1
 script:
   - make CC=$CC
 notifications:
