Added an example for our previous commit
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -1,5 +1,5 @@
 worldpath = /path/to/your/minecraft/world/
 
-format = formatstring
+format = Name: %name, Score: %score, Objective: %objective\n
 
 unbuffered
