--- a/sample.config
+++ b/sample.config
@@ -1,5 +1,5 @@
 worldpath = /path/to/your/minecraft/world/
 
-format = Name: %name, Score: %score, Objective: %objective\n
+scoreboard_format = Name: %name, Score: %score, Objective: %objective\n
 
 unbuffered
