Got %XpLevel and %username working in the player formats
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -2,4 +2,6 @@ worldpath = /path/to/your/minecraft/world/
 
 scoreboard_format = Name: %name, Score: %score, Objective: %objective\n
 
+players_format = Testing %username has level %XpLevel\n
+
 unbuffered
