Added support for health and the food level
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -2,6 +2,7 @@ worldpath = /path/to/your/minecraft/world/
 
 scoreboard_format = Name: %name, Score: %score, Objective: %objective\n
 
-players_format = Testing %username has level %XpLevel\n
+players_format = %username has level %XpLevel\n
+players_format = %username has %Health hit points and a foodlevel of %foodLevel\n
 
 unbuffered
