--- a/sample.config
+++ b/sample.config
@@ -2,7 +2,7 @@ worldpath = /path/to/your/minecraft/world/
 
 scoreboard_format = Name: %name, Score: %score, Objective: %objective\n
 
-players_format = %username has level %XpLevel\n
-players_format = %username has %Health hit points and a foodlevel of %foodLevel\n
+players_format = %username has level %level\n
+players_format = %username has %health hit points and a foodlevel of %food\n
 
 unbuffered
