Started to add support for data coming from the stats/(username).json files
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - clang
 before_install:
   - sudo apt-get update -qq >/dev/null 2>&1
-  - sudo apt-get install -qq libevent-dev >/dev/null 2>&1
+  - sudo apt-get install -qq libevent-dev libjansson-dev >/dev/null 2>&1
 script:
   - make CC=$CC
 notifications:
