--- a/sample.config
+++ b/sample.config
@@ -5,4 +5,8 @@ scoreboard_format = Name: %name, Score: %score, Objective: %objective\n
 players_format = %username has level %level\n
 players_format = %username has %health hit points and a foodlevel of %food\n
 
+level_format = Is it raining? %raining\n
+
+stats_useitem_format = %username used %id for the %valueth time.\n
+
 unbuffered
