--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ compiler:
 before_install:
   - sudo apt-get update -qq >/dev/null 2>&1
   - sudo apt-get install -qq libevent-dev libjansson-dev >/dev/null 2>&1
+  - pkg-config --modversion jansson
+  - pkg-config --modversion libevent
 script:
   - make CC=$CC
 notifications:
