--- a/sample.config
+++ b/sample.config
@@ -9,4 +9,6 @@ level_format = Is it raining? %raining\n
 
 stats_useitem_format = %username used %id for the %valueth time.\n
 
+stats_mineblock_format = %username has mined %id %value times.\n
+
 unbuffered
