Added support for stat.killEntity
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -11,4 +11,6 @@ stats_useitem_format = %username used %id for the %valueth time.\n
 
 stats_mineblock_format = %username has mined %id %value times.\n
 
+stats_killentity_format = %username killed %value %ids\n
+
 unbuffered
