Support for damage dealt, jumps and open inventory
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -13,4 +13,10 @@ stats_mineblock_format = %username has mined %id %value times.\n
 
 stats_killentity_format = %username killed %value %ids\n
 
+stats_damageDealt_format = %username dealt %value hitpoints of damage.\n
+
+stats_jumped_format = %username jumped %value times.\n
+
+open_inventory_format = %username opened his inventory %value times.\n
+
 unbuffered
