Added support for damage taken and updated the postgresql examples
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/postgres/sample.config
+++ b/contrib/postgres/sample.config
@@ -5,3 +5,17 @@ scoreboard_format = INSERT INTO scoreboard (name, objective, score) VALUES ('%na
 players_format = INSERT INTO players (name, level, health, food) VALUES ('%username', %xplevel, %health, %food);\n
 
 level_format = INSERT INTO level (daytime, rain, thunder) VALUES (%daytime, %raining, %thundering);\n
+
+stats_useitem_format = INSERT INTO useitems (name, item, uses) VALUES ('%username', %value, %id);\n
+
+stats_mineblock_format = INSERT INTO minedblock (name, block, mined) VALUES ('%username', %id, %value);\n
+
+stats_killentity_format = INSERT INTO kills (name, entity, kills) VALUES ('%username', '%id', %value);\n
+
+stats_damagedealt_format = INSERT INTO damage_dealt (name, damage) VALUES ('%username', '%value');\n
+
+stats_damagetaken_format = INSERT INTO damage_taken (name, damage) VALUES ('%username', '%value');\n
+
+stats_jumped_format = INSERT INTO jumps (name, jumps) VALUES ('%username', %value);\n
+
+open_inventory_format = INSERT INTO open_inventory (name, counter) VALUES ('%username', %value);\n
