Split it all up slightly more logical
If you were doing something with the past few builds I probably broke something :D

Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/postgres/sample.config
+++ b/contrib/postgres/sample.config
@@ -10,12 +10,10 @@ stats_useitem_format = INSERT INTO useitems (name, item, uses) VALUES ('%usernam
 
 stats_mineblock_format = INSERT INTO minedblock (name, block, mined) VALUES ('%username', %id, %value);\n
 
+stats_craftitem_format = INSERT INTO crafteditem (name, item, times) VALUES ('%username', %id, %value);\n
+
 stats_killentity_format = INSERT INTO kills (name, entity, kills) VALUES ('%username', '%id', %value);\n
 
-stats_damagedealt_format = INSERT INTO damage_dealt (name, damage) VALUES ('%username', '%value');\n
+stats_killedbyentity_format = INSERT INTO killed_by (name, entity, kills) VALUES ('%username', '%id', %value);\n
 
-stats_damagetaken_format = INSERT INTO damage_taken (name, damage) VALUES ('%username', '%value');\n
-
-stats_jumped_format = INSERT INTO jumps (name, jumps) VALUES ('%username', %value);\n
-
-open_inventory_format = INSERT INTO open_inventory (name, counter) VALUES ('%username', %value);\n
+stats_format = INSERT INTO stats (name, stat, count) VALUES ('%username', '%id', %value);\n
