Added support for stat.breakItem
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/postgres/sample.config
+++ b/contrib/postgres/sample.config
@@ -12,6 +12,8 @@ stats_mineblock_format = INSERT INTO minedblock (name, block, mined) VALUES ('%u
 
 stats_craftitem_format = INSERT INTO crafteditem (name, item, times) VALUES ('%username', %id, %value);\n
 
+stats_breakitem_format = INSERT INTO breakitem (name, item, times) VALUES ('%username', %id, %value);\n
+
 stats_killentity_format = INSERT INTO kills (name, entity, kills) VALUES ('%username', '%id', %value);\n
 
 stats_killedbyentity_format = INSERT INTO killed_by (name, entity, kills) VALUES ('%username', '%id', %value);\n
