Added a simple program to replace the weather script in my custom overviewer
Instead of having javascript call this https://gist.github.com/schoentoon/7216533
all the time I might as well just have that json file static on the server updated
by mcscoreboard-miner.

Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - pkg-config --modversion libevent
 script:
   - make CC=$CC
+  - make CC=$CC -C contrib/weather_dot_json
 notifications:
   irc:
     channels:
