Fix a small error in the makefile
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/weather_dot_json/Makefile
+++ b/contrib/weather_dot_json/Makefile
@@ -11,7 +11,7 @@ weather_dot_json: main.c
 	$(CC) $(CFLAGS) main.c -o $(BINARY) $(LFLAGS)
 
 install:
-	cp -fv bin/$(BINARY) /usr/local/bin/$(BINARY)
+	cp -fv $(BINARY) /usr/local/bin/$(BINARY)
 
 clean:
 	rm $(BINARY)
