Added an exec config option
Instead of having to pipe it into your own program manually
using pipes in bash for example. mcscoreboard-miner will now
simply execute your program and write into it's stdin.

Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/sample.config
+++ b/sample.config
@@ -19,4 +19,6 @@ stats_jumped_format = %username jumped %value times.\n
 
 open_inventory_format = %username opened his inventory %value times.\n
 
+exec = cat
+
 unbuffered
