Updated the sample config and the README for the postgresql scripts
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/postgres/sample.config
+++ b/contrib/postgres/sample.config
@@ -19,3 +19,5 @@ stats_killentity_format = INSERT INTO kills (name, entity, kills) VALUES ('%user
 stats_killedbyentity_format = INSERT INTO killed_by (name, entity, kills) VALUES ('%username', '%id', %value);\n
 
 stats_format = INSERT INTO stats (name, stat, count) VALUES ('%username', '%id', %value);\n
+
+exec = psql -f -
