Uh, this is sort of wrong :(
Signed-off-by: Toon Schoenmakers <nighteyes1993@gmail.com>

--- a/contrib/postgres/sample.config
+++ b/contrib/postgres/sample.config
@@ -6,7 +6,7 @@ players_format = INSERT INTO players (name, level, health, food) VALUES ('%usern
 
 level_format = INSERT INTO level (daytime, rain, thunder) VALUES (%daytime, %raining, %thundering);\n
 
-stats_useitem_format = INSERT INTO useitems (name, item, uses) VALUES ('%username', %value, %id);\n
+stats_useitem_format = INSERT INTO useitems (name, item, uses) VALUES ('%username', %id, %value);\n
 
 stats_mineblock_format = INSERT INTO minedblock (name, block, mined) VALUES ('%username', %id, %value);\n
 
